partial landing page fix, fixed overflow on small tiles

--- a/wp-content/themes/engage/assets/scss/components/_ethics.scss
+++ b/wp-content/themes/engage/assets/scss/components/_ethics.scss
@@ -1,5 +1,5 @@
 .ethics-link a{
-	color: #005f86;
+	color: #579d42;
 	text-decoration: none;
 	transition: 0.3s all;
 
@@ -10,5 +10,4 @@
 
 .ethics-link {
 	list-style: none;
-	width: max-content;
 }
